--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>
         <ol>
             <li>자바프로그래밍</li>
-            <li><a href="https://github.com/les020202/seoil">HTML</a></li></li>
+            <li><a href="https://github.com/les020202/seoil/tree/main/htmlwork">HTML</a></li></li>
         </ol>
     </p>
 </body>
